--- a/style.css
+++ b/style.css
@@ -18,7 +18,34 @@ body {
 header {
   background-color: #333;
   color: #fff;
-  padding: 20px 0 60px 0;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+@media (max-width: 900px){
+  header{
+    flex-direction: column;
+    align-items: center;
+  }
+  header nav{
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 600px){
+  .hero .container h2 {
+    font-size: 1.5em;
+  }
+  
+  .hero .container p {
+    font-size: 0.8em;
+    margin-top: 20px;
+  }
+}
+
+header .container{
+  display: flex;
 }
 
 header h1 {
@@ -29,11 +56,12 @@ header h1 {
 header img {
   float: left;
   height: 2.5em;
-  margin-right: 10px;
+  padding-right: 10px;
 }
 nav {
   margin-top: 10px;
   float: right;
+  margin-right: 30px;
 }
 
 nav ul {
@@ -48,6 +76,7 @@ nav ul li {
 nav ul li a {
   color: #fff;
   text-decoration: none;
+  padding: 60px 5px;
 }
 nav ul li a:hover {
   color: darkred;
@@ -58,18 +87,32 @@ nav ul li a:hover {
   background-size: cover;
   color: #fff;
   text-align: center;
+  height: fit-content;
+  width: 100%;
+  overflow: hidden;
+}
+
+.hero .container {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .hero h2 {
+  margin-top: 10%;
   font-size: 2.5em;
-  margin-bottom: 20px;
-  margin-top: 25%;
 }
 
 .hero p {
   font-size: 1.2em;
-  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+.hero button{
+  margin-top: 20px;
 }
 
 button {
@@ -83,9 +126,8 @@ button {
 }
 
 .featured {
-  padding: 80px 0;
   text-align: center;
-  margin-top: 650px;
+  margin-top: 50px;
 }
 
 .featured h2 {
@@ -94,20 +136,40 @@ button {
 }
 
 .featured-items {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .featured-item {
   width: 300px;
+  height: 500px;
   margin: 20px;
-  border: 1px solid #ddd;
-  padding: 20px;
+  border: 2px solid darkred;
+  padding-bottom: 20px;
+  background-color: #333;
+  display: flex;
+  flex-direction: column;
 }
 
 .featured-item img {
   max-width: 100%;
+}
+.featured-item h3{
+    margin: auto 30px;
+}
+
+
+.poster {
+  width: 100%;
+  height: 400px;
+  display: block;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  background-color: aqua;
+  margin-bottom: 20px;
 }
 
 footer {
@@ -116,20 +178,9 @@ footer {
   padding: 20px 0;
   text-align: center;
 }
-
-.poster {
-  width: 200px;
-  height: 300px;
-  display: block;
-  background-size: contain;
-  margin: auto;
-  background-color: aqua;
-  margin-bottom: 40px;
-}
-
 .slideshow{
     width: 98.7vw;
-    height: 90vh;
+    height: 50vw;
     overflow: hidden;
     float: left;
     position: relative;
@@ -138,6 +189,7 @@ footer {
 .slide img{
   width: 100%;
   height: auto;
+  filter: brightness(50%);
 }
 
 .slide {
