--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 }
 
 .container {
-  width: 80%;
   margin: 0 auto;
 }
 
@@ -51,7 +50,7 @@ header .container{
 header h1 {
   font-size: 2.5em;
   float: left;
-  color: darkred;
+  color:darkred;
 }
 header img {
   float: left;
@@ -132,11 +131,15 @@ button {
 
 .featured h2 {
   font-size: 2.5em;
+  width: 100%;
+  padding: 20px 0;
+  background: #333;
   margin-bottom: 40px;
 }
 
 .featured-items {
-  width: 100%;
+  width: 80%;
+  margin: auto; 
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -145,9 +148,9 @@ button {
 .featured-item {
   width: 300px;
   height: 500px;
-  margin: 20px;
   border: 2px solid darkred;
   padding-bottom: 20px;
+  margin: 30px 30px;
   background-color: #333;
   display: flex;
   flex-direction: column;
