--- a/styles.css
+++ b/styles.css
@@ -1,135 +1,169 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #666;
-    color:#fff;
-  }
- 
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
-  .gallery {
-    padding: 20px;
-  }
-  .gallery-item {
-    margin-bottom: 20px;
-    display:flex;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #666;
+  color: #fff;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+.gallery {
+  padding: 20px;
+}
+.gallery-item {
+  margin-bottom: 20px;
+  display: flex;
 
   flex-direction: column;
   align-items: center;
+}
+.box {
+  border: 1px none;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+}
+.image {
+  margin-right: 10px;
+}
+.image img {
+  width: 200px;
+  border-radius: 10px;
+}
 
-  }
-  .box {
-    border: 1px none;
-    border-radius: 10px;
-    overflow: hidden;
-    display: flex;
-  }
-  .image {
-    margin-right: 10px;
-  }
-  .image img {
-    width: 200px;
-    border-radius: 10px;
-  }
-
-  .description {
-    background-color: #999;
-    padding: 10px;
-    flex: 1;
-    font-size: medium;
-    border-radius: 10px;
-    margin:40px 0 40px 20px;
-    padding-left: 40px;
-    color:#000;
+.description {
+  background-color: #999;
+  padding: 10px;
+  flex: 1;
+  font-size: medium;
+  border-radius: 10px;
+  margin: 40px 0 40px 20px;
+  padding-left: 40px;
+  color: #000;
 
   width: 700px;
-    
+}
+.description p {
+  margin: 0;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+@media (max-width: 1100px)
+{
+  .gallery-item .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  .description p {
-    margin: 0;
-  }
-  container {
-    width: 80%;
-    margin: 0 auto;
-  }
-  
+}
+
+@media (max-width: 900px) {
   header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .hero .container h2 {
+    font-size: 1.5em;
+  }
+
+  .hero .container p {
+    font-size: 0.8em;
+    margin-top: 20px;
+  }
+  header nav ul{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+  }
+  header nav ul li{
+    margin: 10px 0;
   }
   
-  @media (max-width: 900px){
-    header{
-      flex-direction: column;
-      align-items: center;
-    }
-    header nav{
-      margin-top: 30px;
-    }
+  .gallery-item .box .description{
+    display: none;
   }
-  
-  @media (max-width: 600px){
-    .hero .container h2 {
-      font-size: 1.5em;
-    }
-    
-    .hero .container p {
-      font-size: 0.8em;
-      margin-top: 20px;
-    }
-  }
-  
-  header .container{
-    display: flex;
-  }
-  
-  header h1 {
-    font-size: 2.5em;
-    float: left;
-    color: darkred;
-  }
-  header img {
-    float: left;
-    height: 2.5em;
-    padding-right: 10px;
-  }
-  nav {
-    margin-top: 10px;
-    float: right;
-    margin-right: 30px;
-  }
-  
-  nav ul {
-    list-style-type: none;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    margin-left: 20px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 60px 5px;
-  }
-  nav ul li a:hover {
-    color: darkred;
-    transition: ease 0.2s;
-  }
-  h2 { text-align:center;
-  font-size: 3rem;}
-  h3 {font-size: 2rem;
-  }
- 
-  a{
-    text-decoration: none;
-  }
+}
+
+header .container {
+  display: flex;
+}
+
+header .container h1{
+  margin: 0 10px;
+}
+
+header h1 {
+  font-size: 2.5em;
+  float: left;
+  color: darkred;
+}
+header img {
+  float: left;
+  height: 2.5em;
+  padding-right: 10px;
+}
+nav {
+  margin-top: 10px;
+  float: right;
+  margin-right: 30px;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+nav ul li a:hover {
+  color: darkred;
+  transition: ease 0.2s;
+}
+h2 {
+  text-align: center;
+  font-size: 3rem;
+  margin: 0;
+  padding-bottom: 30px;
+}
+h3 {
+  font-size: 2rem;
+}
+
+a {
+  text-decoration: none;
+}
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+  width: 100%; 
+}
+
+.titlediv{
+  width: 100%;
+  background: #333;
+  padding: 0;
+  margin-bottom: 30px;
+}
+
